i added new h2 tag to index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <header>
         <h1>Welcome to my website</h1>
     </header>
+    <main>
+        <h2>Our Products</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda architecto minus mollitia eaque? Cupiditate alias ad eaque ea sapiente mollitia, iste dolore perspiciatis tempora maiores, minima ipsa totam laudantium quia.</p>
+    </main>
+    <h2>I want to learn git</h2>
 </body>
 </html>
