--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda architecto minus mollitia eaque? Cupiditate alias ad eaque ea sapiente mollitia, iste dolore perspiciatis tempora maiores, minima ipsa totam laudantium quia.</p>
     </main>
     <h2>I want to learn git</h2>
+    <footer>
+        <p>&copy; All rights reserved</p>
+    </footer>
 </body>
 </html>
