--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
-        </ul>
+            <li>Home</li></ul>
     </nav>
     <header>
         <h1>Welcome to my website</h1>
